# thrml

./: .gitignore  pyproject.toml  sudoku.py  sudoku_9x9.py  sudoku_9x9_animated.py  sudoku_9x9_animated_gif.py
examples/: 00_probabilistic_computing.ipynb  01_all_of_thrml.ipynb  02_spin_models.ipynb  quick_example.ipynb  sudoku_4x4.py  sudoku_4x4_empty.py  sudoku_4x4_thrml.py
