[project]
name = "thrml"
version = "0.1.3"
description = "Thermodynamic HypergRaphical Model Library (THRML)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Extropic AI"},
]
urls = { repository = "https://github.com/idgmatrix/thrml" }

dependencies = [
    "equinox>=0.11.2",
    "jaxtyping>=0.2.23",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
examples = [
    "jupyter>=1.0",
    "matplotlib>=3.7.1",
    "networkx>=2.6.3",
    "dwave_networkx>=0.8.0",
    "scikit-learn>=1.7.0",
]
testing = [
    "coverage==7.3.2",
    "pytest==7.2.0",
    "nbmake==1.4.3",
    "networkx>=2.6.3",
    "optax>=0.2.4"
]
development = [
    "black==25.1.0",
    "ruff==0.11.0",
    "isort==5.12.0",
    "pyright==1.1.399",
    "mypy==1.5.1",
    "pytest-cov==4.0.0",
    "pytest-asyncio==0.21.0",
    "black[jupyter]==25.1.0"
]
docs = [
  "hippogriffe==0.2.0",
  "griffe==1.7.3",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.0",
  "mkdocs-material==9.6.7",
  "mkdocstrings[python]==0.28.3",
  "pymdown-extensions==10.14.3"
]

[tool.setuptools]
packages = { find = { include = ["thrml", "thrml.*"] } }

[tool.ruff]
extend-include = ["*.ipynb"]
src = []
line-length = 120

[tool.ruff.lint]
# F722: Syntax error in forward annotation
ignore = ["F722"]

[tool.isort]
line_length = 120

[tool.black]
line-length = 120

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
include = ["thrml"]
venvPath = "."
venv = ".venv"